// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid default 1`] = `
.c0 {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(2,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`Grid with specified columns 1`] = `
.c0 {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(4,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`Grid with specified gap 1`] = `
.c0 {
  display: grid;
  grid-gap: 2rem;
  grid-template-columns: repeat(2,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;
